# solid-c-cpp

./: .gitignore  Course Proposal.docx  Module 1 - Principles You Need to Know.pptx  Module 2 - The Importance of Tests.pptx  Module 3 - Decoupling Software.pptx  Module 3 - Decoupling.pptx  Module 4 - Legacy Code.pptx  Module 5 - Object Oriented Design and C.pptx  Module 5 - RAII and Memory Management.pptx  Module 5 - RAII and Memory Management.rtf  Module 5 - RAII and Memory Management.txt  Syllabus.docx
Material/: Anatomy of Inheritance.pptx  Best Practices in Software Design and Development.pptx  Design Patterns - The GOF Patterns.pptx  Good C++ Design Practices.pptx  R-Values and Move Semantics.pptx  Reducing File Size and the SRP.pptx  Using Libraries.pptx
Material/DependencyInjection/: ConsoleLogger.cpp  ConsoleLogger.h  ILogFilter.h  ILogger.h  InverseLogFilter.h  LogFilter.h  LogLevel.h  Samples.cpp  TraceLogger.cpp  TraceLogger.h
Material/DevGeeks.2015.CleanCode/: 1. The Evolution of Software.PPT  2. Dependencies - The Arch Enemy.PPT  3. Clean Code and Design Dilemmas.PPT  4. Avoiding Dependencies - SOLID Foundations.PPT  5. Code Smells and Refactoring Techniques.PPT
Material/ModernCpp.Samples/: ModernCpp.sln
Material/ModernCpp.Samples/ModernCpp/: BigObject.h  BigObjectWithMove.h  FromFunctorsToLambda.cpp  ModernCpp.vcxproj  ModernCpp.vcxproj.filters  RValuesAndMoveSemantics.cpp  RangeBasedLoops.cpp  main.cpp
Material/PreferComposition/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  LogFilter.h  TraceLogger.cpp  TraceLogger.h
Material/ReuseWithInheritance/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  LoggerBase.h  Samples.cpp  TraceLogger.cpp  TraceLogger.h
Material/codechurn/: main.py  requirements.txt
Samples/: CMakeLists.txt  Makefile  calculator_lib
Samples/src/: presentation-slides.txt
Samples/src/6_raii_smart_pointers/: TracedResource.h  demos.h  main.cpp  samples-plan.txt
Samples/src/6_raii_smart_pointers/10_when_to_share/: when_to_share.cpp
Samples/src/6_raii_smart_pointers/11_passing/: passing.cpp
Samples/src/6_raii_smart_pointers/12_raii_file_and_lock/: raii_file_and_lock.cpp
Samples/src/6_raii_smart_pointers/13_raii_connection/: Connection.h  raii_connection.cpp
Samples/src/6_raii_smart_pointers/14_custom_deleter/: FileDeleter.h  custom_deleter.cpp
Samples/src/6_raii_smart_pointers/1_manual_leak/: manual_leak.cpp
Samples/src/6_raii_smart_pointers/2_scope_lifetime/: scope_lifetime.cpp
Samples/src/6_raii_smart_pointers/3_hand_rolled_raii/: ResourceGuard.h  hand_rolled_raii.cpp
Samples/src/6_raii_smart_pointers/4_ownership_contracts/: ownership_contracts.cpp
Samples/src/6_raii_smart_pointers/5_mini_smart_ptr/: MiniPtr.h  mini_smart_ptr.cpp
Samples/src/6_raii_smart_pointers/6_unique_ptr/: unique_ptr.cpp
Samples/src/6_raii_smart_pointers/7_shared_ptr/: shared_ptr.cpp
Samples/src/6_raii_smart_pointers/8_weak_ptr/: Node.h  weak_ptr.cpp
Samples/src/6_raii_smart_pointers/9_make_unique/: make_unique.cpp
Samples/src/interop/: c_func.c  c_func.h  cpp_func.cpp  cpp_func.h  main.cpp
Samples/src/legacy_code/: StandardCalculator.cpp  StandardCalculator.h
Samples/src/legacy_code/before/: BusinessCalculator.cpp  BusinessCalculator.h  CalculatorBase.cpp  CalculatorBase.h
Samples/src/legacy_code/inject_logger/: BusinessCalculator.cpp  BusinessCalculator.h  CalculatorBase.cpp  CalculatorBase.h  StandardCalculator.cpp  StandardCalculator.h
Samples/src/legacy_code/inject_logger/logger/: ConsoleLogger.h  ILogger.h  RecordingLogger.h
Samples/src/legacy_code/refactored/: BusinessCalculator.cpp  BusinessCalculator.h  CalculatorBase.cpp  CalculatorBase.h  StandardCalculator.cpp  StandardCalculator.h
Samples/src/legacy_code/refactored_again/: BusinessCalculator.cpp  BusinessCalculator.h  Calculator.cpp  Calculator.h  Memory.cpp  Memory.h  StandardCalculator.cpp  StandardCalculator.h
Samples/src/oop_in_c/: ConsoleLogger.c  ConsoleLogger.h  FileLogger.c  FileLogger.h  ILogger.h  main.c
Samples/src/reduce_coupling/5_shared_object/file_processor/: DynamicLibrary.cpp  DynamicLibrary.h  SharedObject.cpp  SharedObject.h  main.cpp
Samples/src/reduce_coupling/5_shared_object/include/logger/: ILogger.h
Samples/src/reduce_coupling/5_shared_object/logger/: Exports.cpp
Samples/src/samples/: main.cpp
Samples/src/shared_object/dynamic_loader/: LibraryLoader.cpp  LibraryLoader_win.hpp
Samples/src/shared_object/file_processor/: main.cpp
Samples/src/static_library/app/: main.cpp
Samples/src/tests/: characteristic_test.cpp
Samples/tests/: math_test_fixture.cpp  test_methods.cpp
